contrast fixed

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,15 +1,15 @@
 :root {
-    --primary-color: rgb(245, 245, 245);
-    --secondary-color: darkblue;
-    --accent1-color: rgb(1, 1, 8);
-    --accent2-color: #F97316;
+    --primary-color: rgb(27, 27, 27);
+    --secondary-color: #FFFFFF;
+    --accent1-color: rgb(0, 46, 38);
+    --accent2-color: #2E8B57;
     --heading-font: "Montserrat", "Lato", extrabold;
     --body-font: Opens Sans, Roboto;
 }
 
 header {
     background-color: var(--primary-color);
-    color: var(--accent1-color);
+    color: var(--accent2-color);
     text-decoration: none;
 }
 
@@ -46,7 +46,7 @@ header img {
 h2,
 h3 {
     font-family: var(--heading-font);
-    color: var(--primary-color);
+    /* color: var(--secondary-color); */
     font-size: 2em;
 
     top: 20px;
@@ -55,7 +55,7 @@ h3 {
     text-align: center;
     opacity: 0.9;
     background-color: var(--accent2-color);
-    color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 nav,
@@ -89,7 +89,7 @@ h1 {
     text-align: center;
     opacity: 0.9;
     background-color: var(--accent2-color);
-    color: var(--primary-color);
+    color: var(--secondary-color);
 
 }
 
@@ -100,8 +100,8 @@ h1 {
     padding: 5px;
     text-align: left;
     opacity: 0.8;
-    background-color: var(--accent2-color);
-    color: var(--primary-color)
+    background-color: var(--accent1-color);
+    color: var(--secondary-color)
 }
 
 .hero article img {
@@ -117,6 +117,7 @@ h1 {
 
 .hero article p {
     text-align: justify;
+
 }
 
 section p {
